# edge-monitor

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_arm.sh
protocol/: msg_define.json
sample/: conf.json  yoda_sixsix_conf.json
sample/proc/: meminfo  stat
sample/proc/1588/: cmdline  smaps  stat
sample/proc/1788/: cmdline  comm  smaps  stat
src/: CapsMsg.h  common.h  conf.cpp  conf.h  def.h  device_info.cpp  device_info.h  env.cpp  env.h  job_def.h  job_i_executor.cpp  job_i_executor.h  job_manager.cpp  job_manager.h  job_runner.cpp  job_runner.h  logger.cpp  logger.h  main.cpp  options.cpp  options.h  util.cpp  util.h
src/executors/: busy_box.cpp  busy_box.h  child_process.cpp  child_process.h  collect_battery.cpp  collect_battery.h  collect_smap.cpp  collect_smap.h  collect_top.cpp  collect_top.h  crash_reporter.cpp  crash_reporter.h  executor_def.h  multi_thread_executor.cpp  multi_thread_executor.h  watch_pid.cpp  watch_pid.h
src/message/: BatteryInfos.cc  BatteryInfos.h  CPUInfos.cc  CPUInfos.h  CollectData.cc  CollectData.h  CrashLog.cc  CrashLog.h  DeviceStatus.cc  DeviceStatus.h  Log.cc  Log.h  MemInfos.cc  MemInfos.h  MessageCommon.h  MessageDefine.h  ProcCPUInfo.cc  ProcCPUInfo.h  ProcMemInfo.cc  ProcMemInfo.h  SysCPUCoreInfo.cc  SysCPUCoreInfo.h  SysCPUInfo.cc  SysCPUInfo.h  SysMemInfo.cc  SysMemInfo.h  TaskCommand.cc  TaskCommand.h  TaskStatus.cc  TaskStatus.h
src/websocket/: WebSocketClient.cc  WebSocketClient.h
tools/: build.sh  install-toolchain-sysroot.sh
